--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,3 +1,4 @@
+<h1>Welcome! </h1>
+<p> Hypothetically, This will be your Trendit home page, and It will rule! </p>
 
-<p>This is going to be Trendit Someday soon!</p>
 
