--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -31,6 +31,38 @@ header {
 	position:  relative;
 }
 
+fieldset.login {
+	border: none;
+	position: relative;
+	color: #000;
+	margin: 0 auto;
+	width: 250px;
+	top: 200px;
+}
+
+input.login {
+	width: 250px;
+	height: 40px;
+	margin: 10px 0px;
+	background-color: rgba(0, 0, 0, 0.7);
+	color: #fff;
+	font-size: 1em;
+	font-weight: 100;
+	float: left;
+}
+
+.loginButton {
+	width:100px;
+	height:40px;
+	font: 100 12pt 'Lato', sans-serif;
+	color: #fff;
+	-moz-box-shadow: inset 1px 1px 4px 0 rgba(0, 0, 0, 0.6), 1px 1px 2px 0 rgba(255, 255, 255, 0.6);
+	-webkit-box-shadow: inset 1px 1px 4px 0 rgba(0, 0, 0, 0.6), 1px 1px 2px 0 rgba(255, 255, 255, 0.6);
+	box-shadow: inset 1px 1px 4px 0 rgba(0, 0, 0, 0.6), 1px 1px 2px 0 rgba(255, 255, 255, 0.6);
+	background-image: -webkit-gradient(linear, left bottom, left top, from(#96292a), to(#af2f30));
+	background-image: -moz-linear-gradient(90deg, #96292a 0%, #af2f30 100%);
+}
+
 span.logo {
 	font-family: 'Jenna Sue';
 	color:  #fff;
@@ -42,20 +74,23 @@ span.logo {
 
 #nav {
 	position: absolute;
-	top: 0px;
-	right: 0px
+	width: 400px;
+	bottom: 15px;
+	right: 50%;
+	margin-right:-200px;
+	text-align: center;
 }
 
 #nav a {
 	text-decoration: none;
-	color: #fff;
+	color: rgba(200, 200, 200, 1);
 	font-family: 'Lato', sans-serif;
 	font-weight: 100;
 	line-height:3.8;
 }
 
 #nav a:hover {
-	color: #333;
+	color: rgba(255, 255, 255, 1);
 }
 
 section.introText {
@@ -109,6 +144,7 @@ p {
 	line-height: 1.4em;
 	font-size: 1.1em;
 	text-shadow: 0px 1px 3px #000;
+	text-align: center;
 }
 
 p.legal {
@@ -127,7 +163,7 @@ p.introMessageTwo {
 .frontContent {
 	width:  960px;
 	margin:  0 auto;
-	margin-top:  65px;
+	margin-top:  50px;
 }
 
 .frontMessage {
@@ -189,14 +225,19 @@ input {
 	height: 35px;
 	width: 336px;
 	margin: 5px 0;
-	font: 100 1em 'Lato', Sans-serif;
-	color: #fff;
-	padding-left:5px;
+	font-weight: 100;
+	font-family: 'Lato', Sans-serif;
+	padding-left: 5px;
 	background-color: rgba(50, 50, 50, 0.88);
 	border: none;
 	-moz-box-shadow: inset 1px 1px 4px 0 rgba(0, 0, 0, 0.6), 1px 1px 2px 0 rgba(255, 255, 255, 0.6);
 	-webkit-box-shadow: inset 1px 1px 4px 0 rgba(0, 0, 0, 0.6), 1px 1px 2px 0 rgba(255, 255, 255, 0.6);
 	box-shadow: inset 1px 1px 4px 0 rgba(0, 0, 0, 0.6), 1px 1px 2px 0 rgba(255, 255, 255, 0.6);
+}
+
+input.signup {
+	color: #fff;
+	font-size: 1.2em;
 }
 
 input.name {
@@ -270,7 +311,7 @@ button.startDesigning {
 	-webkit-border-radius: 5px;
 }
 
-#errorExplanation h2, p {
+#errorExplanation h2, #errorExplanation p {
 	display: none;
 }
 
@@ -287,7 +328,6 @@ button.startDesigning {
 }
 
 .notice {
-	border: 2px solid black;
 	position: absolute;
 	top: 60px;
 	height: 50px;
@@ -305,4 +345,23 @@ button.startDesigning {
 	background: #ccc;
 	margin: 0;
 	padding: 0.5em;
+	position: absolute;
+	top:500px;
+	z-index:100;
+}
+
+#debug {
+	margin-top: 1em;
+	margin-left: auto;
+}
+
+#debug a, #debug a.visited {
+	text-decoration: none;
+	color: blue;
+}
+
+fieldset.debug_info {
+	text-align: left;
+	margin: 1em;
+	background: #eee;
 }
