--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,16 +4,16 @@
   <title><%= @title %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag :defaults, "jquery", "application" %>
-  <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 	
 <%= yield %>
 
-	<% if ENV["RAILS_ENV"] == "development" %>
-		<%= debug(params) %>
-	<% end %>
+		<% if ENV["RAILS_ENV"] == "development" %>
+			<%= debug(params) %>
+			<%= debug(session) %>
+		<% end %>
 
 </body>
 </html>
