--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -4,7 +4,7 @@
   <title><%= @title %></title>
   <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    "site", :media => "all", :rel => "stylesheet" %>
-  <%= javascript_include_tag "site" %>
+  <%= javascript_include_tag :defaults, "site" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -15,15 +15,23 @@
 		
 		<span class="logo">Trendit</span>
 
-		<div id="nav">
-			<%= link_to_unless_current "Home",		 'index' %> |
-			<%= link_to_unless_current "About Us",   'about' %> |
-			<%= link_to_unless_current "Help", 	      'help' %>
-		</div>
-		
 	</div>
 	
 </header>
+
+<div id="nav">
+			<% if session[:user_id] -%>
+			<%= nav_link "Home |", "user",  "index" %>
+			<%= nav_link "Logout", "user", "logout" %>
+			<% else -%>
+			<%= nav_link "Home |", "user",  "register" %> 
+			<%= nav_link "About Us |", "site", "about" %>
+			<%= nav_link "Help |", "site",      "help" %>
+			<%= nav_link "Log In", "user",     "login" %>
+			<% end -%>
+
+
+		</div>
 
 	<div id="content">
 		<% if flash[:notice] -%>
