--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -4,6 +4,7 @@
   <title><%= @title %></title>
   <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    "site", :media => "all", :rel => "stylesheet" %>
+  <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js", "plugins/jquery.validate.min" %>
   <%= javascript_include_tag :defaults, "site" %>
   <%= csrf_meta_tags %>
 </head>
