--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -24,6 +24,10 @@ header {
 	box-shadow: 0px 2px 3px rgba(0, 0, 0, .2);
 }
 
+label {
+	font-family: 'Lato', sans-serif;
+}
+
 #headerContainer {
 	width:  960px;
 	height:  inherit;
@@ -364,4 +368,14 @@ fieldset.debug_info {
 	text-align: left;
 	margin: 1em;
 	background: #eee;
+}
+
+.input-section-float {
+	float: left;
+	display: inline-block;
+}
+
+label.error {
+	display: block;
+	color: red;
 }
