fixed spacing issue

--- a/app/views/user/register.html.erb
+++ b/app/views/user/register.html.erb
@@ -38,11 +38,9 @@
 				</section>
 				<br />
 
-				<%= form.email_field :email, :class => "signup required email", :placeholder => "EMAIL" %>
-				<br />
+				<%= form.email_field :email, :class => "signup required email disp-block", :placeholder => "EMAIL" %>
 
-				<%= form.password_field :password, :class => "signup required", :placeholder => "PASSWORD" %>
-				<br />
+				<%= form.password_field :password, :class => "signup required disp-block", :placeholder => "PASSWORD" %>
 
 				<%= error_messages_for "user" %>
 
