added user list controller/view

--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -10,7 +10,7 @@ body {
 	-o-background-size: cover;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6, p, table	 {
 	color: #fff;
 	font-family: 'Droid Sans', sans-serif;
 	font-weight: 100;
